better text legibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ p {
     font-family: 'Open Sans';
     font-size: 1.1em;
     color: #2e2e2e;
+    line-height: 1.7em;
+    letter-spacing: 1px;
 }
 /* Styling the content area */
 
@@ -92,12 +94,14 @@ p {
 .share-area {
     text-align: center;
     padding-right: 2em;
+    margin-top: 2em;
 }
 .share-buttons {
     list-style: none;
 }
 .share-buttons li {
     display: inline;
+    padding: 0 0.5em;
 }
 /* The seperator is styled here */
 
@@ -107,4 +111,8 @@ hr {
 }
 .footer {
     text-align: center;
+}
+
+.footer {
+    font-size: 0.9em;
 }
